<resources>
    <string name="app_name">YouTube Learning Buddy</string>
    <!-- Search videos-->
    <string name="search_hint">Search videos</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="search_result_count"><b>%s</b> results for <b>%s</b></string>
    <string name="unknown_error">Unknown error</string>
    <string name="action_retry">Retry</string>
    <!-- Video details -->
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="video_placeholder_image">Video Placeholder Image</string>
    <string name="add_to_topic_icon">Add to topic icon</string>
    <string name="favorites_icon">Add or remove from favorites image view</string>
    <string name="comments_label">Comments</string>
    <string name="author_profile_image">Comment author profile image</string>
    <string name="no_comments_for_this_video">No comments for this video</string>
    <string name="comments_disabled">Comments for this video are disabled</string>
    <string name="player_init_failed">Player initialization failed</string>
    <string name="video_description_label">Description</string>
    <string name="save_video_to">Save video to:</string>
    <!-- Topics -->
    <string name="no_topics">No topics created yet</string>
    <string name="create_new_topic">Create new topic</string>
    <string name="dialog_pos_btn">OK</string>
    <string name="dialog_neg_btn">Cancel</string>
    <string name="topic_name">Topic name:</string>
    <string name="new_topic">NEW TOPIC</string>
    <!-- Topic Details -->
    <string name="no_videos_for_topic">No videos for this topic yet</string>
    <!-- Favorites-->
    <string name="video_added_to_favorites">Video added to favorites</string>
    <string name="video_removed_from_favorites">Video removed from favorites</string>
    <string name="no_favorites">No favorite videos added yet</string>
    <!-- Labels for navigation graph and bottom navigation graph-->
    <string name="search_videos">Search</string>
    <string name="topics">Topics</string>
    <string name="favorites">Favorites</string>
    <string name="video_details">Video Details</string>
    <string name="topic_details">Topic Details</string>
    <string name="select_topics">Select Topics</string>

    <string name="topic_toolbar_title">Topic:</string>
    <string name="topic_added_to_video">Topic added to video</string>
    <string name="topic_removed_from_video">Topic removed from video</string>
    <string name="topic_item_delete_icon">Topic Item Delete Icon</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_preamble">Deleting </string>
    <string name="delete_msg">Deleting <b>%s</b></string>
    <string name="video_removed_from_topic">Video removed from topic</string>


</resources>
