<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.ang.acb.youtubelearningbuddy.data.local.entity.VideoEntity" />

        <variable name="video" type="VideoEntity" />
        <variable name="commentsCount" type="int"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize">

        <TextView
            android:id="@+id/video_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/video_description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:toggleVisibility="@{video.description != null}"/>

        <TextView
            android:id="@+id/video_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@{video.description}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:toggleVisibility="@{video.description != null}"
            tools:text="@tools:sample/lorem"/>

        <View
            android:id="@+id/view_divider_desc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:toggleVisibility="@{commentsCount != 0}"/>

        <TextView
            android:id="@+id/comments_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/comments_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:toggleVisibility="@{commentsCount != 0}"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/comment_item"
            app:toggleVisibility="@{commentsCount != 0}"/>

        <TextView
            android:id="@+id/no_results_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            app:toggleVisibility="@{commentsCount == 0}"
            tools:text="@string/no_comments_for_this_video"/>

    </LinearLayout>
</layout>